--- a/view/pages/base.html
+++ b/view/pages/base.html
@@ -3,9 +3,45 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>毛哥EM資訊密技</title>
+        <title>emtech</title>
         <link rel="stylesheet" href="/static/style.css" />
         <link rel="stylesheet" href="/static/nord.css" />
+        <meta
+            name="description"
+            content="毛哥EM資訊密技，提供最新的資訊技術文章與教學。"
+        />
+        <meta name="robots" content="index, follow, max-image-preview:large" />
+        <link
+            rel="alternate"
+            type="application/rss+xml"
+            href="https://emtech.cc/rss"
+        />
+
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/static/icons/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/static/icons/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/static/icons/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/static/icons/site.webmanifest" />
+        <link rel="shortcut icon" href="/static/icons/favicon.ico" />
+        <meta name="msapplication-TileColor" content="#2d89ef" />
+        <meta
+            name="msapplication-config"
+            content="/static/icons/browserconfig.xml"
+        />
+        <meta name="theme-color" content="#ffffff" />
     </head>
     <body class="">
         {{nav}}
