--- a/view/partials/footer.html
+++ b/view/partials/footer.html
@@ -1,3 +1,26 @@
 <footer>
-    <p>&copy; 2024 emtech</p>
+    <div class="footer-container">
+        <img src="/static/img/logo.svg" alt="" class="logo" />
+        <div class="footer-text">
+            <p class="copyright">©2021 - 2024 By 毛哥EM</p>
+            <p>
+                毛哥EM資訊密技使用毛哥EM設計與開發的 emblog
+                靜態網頁生成器生成。<br />原創文章採 CC BY
+                授權，轉載請註明來源。部分圖片取自網路，若有侵權請與作者聯絡。
+            </p>
+        </div>
+        <div class="footer-social">
+            <a href="" target="_blank"
+                ><img src="/static/img/github.svg" alt="GitHub"
+            /></a>
+            <a href="" target="_blank"
+                ><img
+                    src="/static/img/instagram.svg"
+                    alt="Instagram" /></a
+            ><a href="" target="_blank"
+                ><img src="/static/img/rss.svg" alt="RSS"
+            /></a>
+        </div>
+    </div>
 </footer>
+<div class="transition"></div>
