--- a/view/partials/nav.html
+++ b/view/partials/nav.html
@@ -1,8 +1,27 @@
 <nav>
-    <div class="title">毛哥EM資訊密技</div>
+    <a href="/" class="title">
+        <img src="/static/img/logo.svg" alt="" />
+        毛哥EM資訊密技
+    </a>
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/tags">Tags</a></li>
+        <li><a href="/post">文章</a></li>
+        <li><a href="/series">專欄</a></li>
+        <li><a href="/about">關於</a></li>
     </ul>
-    <div class="right"></div>
+    <div class="right">
+        <a href="" target="_blank"
+            ><img src="/static/img/dice.svg" alt="隨機文章"
+        /></a>
+        <a href="" target="_blank"
+            ><img src="/static/img/github.svg" alt="GitHub"
+        /></a>
+        <a href="" target="_blank"
+            ><img src="/static/img/instagram.svg" alt="Instagram"
+        /></a>
+        <input type="checkbox" id="search-toggle" />
+        <input type="search" placeholder="搜尋" />
+        <label for="search-toggle"
+            ><img src="/static/img/search.svg" alt="Search"
+        /></label>
+    </div>
 </nav>
