--- a/static/style.css
+++ b/static/style.css
@@ -56,16 +56,17 @@ body {
     top: 50% !important;
     left: 50% !important;
 }
-.toHome .home-page, .toPost .home-page {
+.toHome .home-page,
+.toPost .home-page {
     display: block;
     position: absolute;
     width: 100%;
     top: 0;
     left: 0;
     z-index: 1;
-   
 }
-.toHome .home-page{
+.toHome .home-page {
+    position: fixed;
     animation: slideIn 0.5s forwards ease-in-out;
 }
 @keyframes slideIn {
@@ -385,6 +386,13 @@ a.header-categories-item {
     height: 8rem;
     background: url("https://raw.githubusercontent.com/emfont/emfont/main/og.png")
         no-repeat center center / cover;
+    background-size: 100% auto;
+    transition: background-size 0.3s;
+    cursor: pointer;
+}
+
+.header-info:hover {
+    background-size: 110% auto;
 }
 
 .header-newPost {
@@ -518,6 +526,7 @@ section {
 }
 .toc ul a {
     color: rgba(139, 155, 204, 0.6);
+    transition: color 0.3s, font-size 0.3s;
 }
 .toc ul li a.current {
     color: rgba(139, 155, 204);
@@ -525,7 +534,7 @@ section {
     font-weight: 800;
 }
 
-.toc ul li:has(.current):marker {
+.toc ul li:has(a.current)::marker{
     color: rgba(139, 155, 204);
 }
 .discord-join {
