--- a/view/pages/index.html
+++ b/view/pages/index.html
@@ -16,34 +16,6 @@
             type="application/rss+xml"
             href="https://emtech.cc/rss"
         />
-        <!-- icons -->
-        <script type="application/ld+json">
-            {
-              "@context" : "https://schema.org",
-              "@type" : "WebSite",
-              "name" : "Example Company",
-              "alternateName": ["BT", "B-T", "Burnt Toast Shop"],
-              "url" : "https://example.com/",
-              "potentialAction": {
-                "@type": "SearchAction",
-                "target": {
-                  "@type": "EntryPoint",
-                  "urlTemplate": "https://query.example.com/search?q={search_term_string}"
-                },
-                "query-input": "required name=search_term_string"
-              },"@context": "https://schema.org",
-              "@type": "WebSite",
-              "url": "https://www.example.com/",
-              "potentialAction": {
-                "@type": "SearchAction",
-                "target": {
-                  "@type": "EntryPoint",
-                  "urlTemplate": "https://query.example.com/search?q={search_term_string}"
-                },
-                "query-input": "required name=search_term_string"
-
-            }
-        </script>
     </head>
     <body class="">
         <nav>
@@ -52,7 +24,7 @@
                 毛哥EM資訊密技
             </a>
             <ul>
-                <li><a href="/post">文章</a></li>
+                <li><a href="/p">文章</a></li>
                 <li><a href="/series">專欄</a></li>
                 <li><a href="/about">關於</a></li>
             </ul>
