--- a/view/partials/nav.html
+++ b/view/partials/nav.html
@@ -4,7 +4,7 @@
         毛哥EM資訊密技
     </a>
     <ul>
-        <li><a href="/post">文章</a></li>
+        <li><a href="/p">文章</a></li>
         <li><a href="/series">專欄</a></li>
         <li><a href="/about">關於</a></li>
     </ul>
