--- a/view/pages/home.html
+++ b/view/pages/home.html
@@ -17,10 +17,33 @@
             name="og:description"
             content="A group of U.S. Marines, under command of..."
         />
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org/",
+                "@type": "ProfilePage",
+                "image": "https://emtech.cc/static/img/EMprofile.png",
+                "url": "https://emtech.cc/",
+                "logo": "https://emtech.cc/static/img/EMprofile.png",
+                "name": "毛哥EM資訊密技",
+                "alternateName": ["毛哥EM", "emtech"],
+                "description": "毛哥EM資訊密技，提供最新的資訊技術文章與教學。",
+                "email": "info@elvismao.com",
+                "contactPoint": {
+                    "@type": "ContactPoint",
+                    "email": "info@elvismao.com"
+                },
+                "foundingDate": "2021-06-04",
+                "numberOfEmployees": {
+                    "@type": "QuantitativeValue",
+                    "value": 1
+                },
+                "sameAs": ["https://www.instagram.com/emtech.cc/"]
+            }
+        </script>
     </head>
     <body class="">
         {{nav}}
-        <div class="main-container post-page">{{post}}</div>
+        <div class="main-container post-page"></div>
         <div class="main-container home-page">{{home}}</div>
         {{footer}}
         <script src="/static/script.js"></script>
