--- a/view/partials/post.html
+++ b/view/partials/post.html
@@ -1,7 +1,7 @@
 <div class="post">
     <header>
         <div class="post-header">
-            <div class="header-tags">{{header-categorie}} {{header-tag}}</div>
+            <div class="header-tags">{{headerCategories}} {{headerTags}}</div>
             <div class="title-box">
                 <h1>{{title}}</h1>
             </div>
@@ -13,7 +13,7 @@
                 </div>
                 <div class="meta">
                     <img src="/static/img/clock.svg" alt="" /><span
-                        >{{time}}</span
+                        >{{readingTime}}</span
                     >
                 </div>
                 <div class="meta">
@@ -22,15 +22,17 @@
                     >
                 </div>
             </div>
-            <img src="{{thumbnail}}" class="post-thumbnail" alt="" />
+            <img
+                src="{{thumbnail}}"
+                class="post-thumbnail"
+                alt=""
+                style="background-color: {{colors}};"
+            />
         </div>
     </header>
     <main>
         <section class="post-container">
-            <div class="tldr">
-                <h2 id="簡單來說">簡單來說</h2>
-                <div>{{tldr}}</div>
-            </div>
+            {{tldr}}
             <div class="post-content">
                 {{content}}
                 <div class="author-container">
@@ -53,7 +55,7 @@
                         授權，轉載請註明來自毛哥EM資訊密技。
                     </div>
                 </div>
-                <div class="post-tags">標籤: {{post-tag}}</div>
+                <div class="post-tags">標籤: {{postTags}}</div>
             </div>
         </section>
         <aside>
@@ -69,186 +71,13 @@
                 </div>
                 <div class="toc">
                     <h2>目錄</h2>
-                    <ul>
-                        <li>
-                            <a href="#什麼是福瑞-(Furry)？"
-                                >什麼是福瑞 (Furry)？</a
-                            >
-                        </li>
-                        <li>
-                            <a href="#為什麼有人喜歡福瑞？"
-                                >為什麼有人喜歡福瑞？</a
-                            >
-                        </li>
-                        <li>
-                            <a href="#福瑞文化的多樣性">福瑞文化的多樣性</a>
-                        </li>
-                        <li>
-                            <a href="#福瑞文化的發展">福瑞文化的發展</a>
-                        </li>
-                        <li>
-                            <a href="#福瑞文化的未來">福瑞文化的未來</a>
-                        </li>
-                    </ul>
+                    <ul></ul>
                 </div>
                 {{aside}}
             </div>
         </aside>
         <div class="related-posts">
             <h2>本系列其他文章</h2>
-            <div class="related-posts-container">
-                <article>
-                    <div
-                        class="hero"
-                        style="
-                            background-image: url('/static/img/thumbnail.webp'),
-                                linear-gradient(
-                                    135deg,
-                                    #fd7ce1,
-                                    #00e69b,
-                                    #00e99a
-                                );
-                        "
-                    ></div>
-                    <div class="info">
-                        <div class="post-categories">軟體分享</div>
-                        <h3>
-                            <a href="/posts/MultiWall"
-                                >【MultiWall】讓不同螢幕放不同桌布</a
-                            >
-                        </h3>
-
-                        <div class="tags">
-                            <a href="/categories/軟體分享">軟體分享</a>
-                        </div>
-                    </div>
-                </article>
-                <article>
-                    <div
-                        class="hero"
-                        style="
-                            background-image: url('https://emtech.cc/ironman2023_2709523197975058030.webp'),
-                                linear-gradient(135deg, #000, #000, #000);
-                        "
-                    ></div>
-                    <div class="info">
-                        <div class="post-categories">軟體分享</div>
-                        <h3>
-                            <a href="/posts/MultiWall"
-                                >【MultiWall】讓不同螢幕放不同桌布</a
-                            >
-                        </h3>
-
-                        <div class="tags">
-                            <a href="/categories/軟體分享">軟體分享</a>
-                        </div>
-                    </div>
-                </article>
-                <article>
-                    <div
-                        class="hero"
-                        style="
-                            background-image: url('/static/img/thumbnail.webp'),
-                                linear-gradient(
-                                    135deg,
-                                    #fd7ce1,
-                                    #00e69b,
-                                    #00e99a
-                                );
-                        "
-                    ></div>
-                    <div class="info">
-                        <div class="post-categories">軟體分享</div>
-                        <h3>
-                            <a href="/posts/MultiWall"
-                                >【MultiWall】讓不同螢幕放不同桌布</a
-                            >
-                        </h3>
-
-                        <div class="tags">
-                            <a href="/categories/軟體分享">軟體分享</a>
-                        </div>
-                    </div>
-                </article>
-                <article>
-                    <div
-                        class="hero"
-                        style="
-                            background-image: url('/static/img/thumbnail.webp'),
-                                linear-gradient(
-                                    135deg,
-                                    #fd7ce1,
-                                    #00e69b,
-                                    #00e99a
-                                );
-                        "
-                    ></div>
-                    <div class="info">
-                        <div class="post-categories">軟體分享</div>
-                        <h3>
-                            <a href="/posts/MultiWall"
-                                >【MultiWall】讓不同螢幕放不同桌布</a
-                            >
-                        </h3>
-
-                        <div class="tags">
-                            <a href="/categories/軟體分享">軟體分享</a>
-                        </div>
-                    </div>
-                </article>
-                <article>
-                    <div
-                        class="hero"
-                        style="
-                            background-image: url('/static/img/thumbnail.webp'),
-                                linear-gradient(
-                                    135deg,
-                                    #fd7ce1,
-                                    #00e69b,
-                                    #00e99a
-                                );
-                        "
-                    ></div>
-                    <div class="info">
-                        <div class="post-categories">軟體分享</div>
-                        <h3>
-                            <a href="/posts/MultiWall"
-                                >【MultiWall】讓不同螢幕放不同桌布</a
-                            >
-                        </h3>
-
-                        <div class="tags">
-                            <a href="/categories/軟體分享">軟體分享</a>
-                        </div>
-                    </div>
-                </article>
-                <article>
-                    <div
-                        class="hero"
-                        style="
-                            background-image: url('/static/img/thumbnail.webp'),
-                                linear-gradient(
-                                    135deg,
-                                    #fd7ce1,
-                                    #00e69b,
-                                    #00e99a
-                                );
-                        "
-                    ></div>
-                    <div class="info">
-                        <div class="post-categories">軟體分享</div>
-                        <h3>
-                            <a href="/posts/MultiWall"
-                                >【MultiWall】讓不同螢幕放不同桌布</a
-                            >
-                        </h3>
-
-                        <div class="tags">
-                            <a href="/categories/軟體分享">軟體分享</a>
-                        </div>
-                    </div>
-                </article>
-            </div>
         </div>
     </main>
     <h2 class="continue">繼續閱讀...</h2>
