--- a/view/partials/aside.html
+++ b/view/partials/aside.html
@@ -1,17 +1,8 @@
 <a href="https://dc.elvismao.com">
     <div class="discord-join">
-        <img
-            src="/static/img/discord.svg"
-            class="discord-float"
-        />
-        <img
-            src="/static/img/discord.svg"
-            class="discord-float"
-        />
-        <img
-            src="/static/img/discord.svg"
-            class="discord-float"
-        />
+        <img src="/static/img/discord.svg" class="discord-float" />
+        <img src="/static/img/discord.svg" class="discord-float" />
+        <img src="/static/img/discord.svg" class="discord-float" />
 
         <h2>遇到問題嗎?</h2>
         <p>歡迎加入 Discord 與我們一起討論。</p>
@@ -20,63 +11,23 @@
 <div class="recent">
     <h2>近期瀏覽</h2>
     <h3>
-        <a href=""
-            >甚麼是福瑞
-            (Furry)？認識不獸控制的獸圈</a
-        >
+        <a href="">甚麼是福瑞 (Furry)？認識不獸控制的獸圈</a>
     </h3>
     <h3>
         <a href="">你不知道的 git add -A 魔力</a>
     </h3>
     <h3>
-        <a href=""
-            >解決 Certbot SSL 更新失敗 - The manual
-            plugin is not ...</a
-        >
+        <a href="">解決 Certbot SSL 更新失敗 - The manual plugin is not ...</a>
     </h3>
     <h3><a href="">如何更改 SSH 預設端口</a></h3>
     <h3>
-        <a href=""
-            >啊我剛才 push 錯了! 如何在 Git
-            中撤銷提交</a
-        >
+        <a href="">啊我剛才 push 錯了! 如何在 Git 中撤銷提交</a>
     </h3>
 </div>
 <div id="tags">
     <h2>標籤</h2>
-    <a href="">
-        標籤
-        <div>20</div> </a
-    ><a href="">
-        標籤
-        <div>20</div> </a
-    ><a href="">
-        標籤
-        <div>20</div> </a
-    ><a href="">
-        標籤
-        <div>20</div> </a
-    ><a href="">
-        標籤
-        <div>20</div> </a
-    ><a href="">
-        標籤
-        <div>20</div> </a
-    ><a href="">
-        標籤
-        <div>20</div> </a
-    ><a href="">
-        標籤
-        <div>20</div> </a
-    ><a href="">
-        標籤
-        <div>20</div> </a
-    ><a href="">
-        標籤
-        <div>20</div>
-    </a>
 </div>
 <div id="time">
     <h2>毛哥EM資訊密技 已上線</h2>
-    <p>3 年 113 天</p>
+    <p>3 年</p>
 </div>
