--- a/view/partials/post.html
+++ b/view/partials/post.html
@@ -26,7 +26,7 @@
                 src="{{thumbnail}}"
                 class="post-thumbnail"
                 alt=""
-                style="background-color: {{colors}};"
+                style="background: {{colors}};"
             />
         </div>
     </header>
